[package]
name = "threshold-signing"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
cggmp21 = { git = "https://github.com/LFDT-Lockness/cggmp21", branch = "m", default-features = false, features = ["curve-secp256k1"] }
round-based = "0.4.0"
futures = "0.3"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
digest = "0.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.4"
bincode = "1.3"
aes-gcm = "0.10"
base64 = "0.21"
tempfile = "3.15.0"
tracing = "0.1.41"