[package]
name = "cggmp21-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"
colored = "3.0.0"
clap = { version = "4.4", features = ["derive"] }
cggmp21 = { version = "0.6.0", default-features = false, features = ["curve-secp256k1"] }
cggmp21-keygen = "0.5.0"
round-based = "0.4.0"
futures = "0.3"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
bincode = "1.3.3"
aes-gcm = "0.10"
tempfile = "3.15.0"
tracing = "0.1.41"
chrono = "0.4.39"
uuid = { version = "1.11.1", features = ["v4"] }
tungstenite = "0.20.1"
futures-util = "0.3.31"
rust-fsm = "0.7.0"
pot = "3.0.1"
rmp-serde = "1.3.0"
hex = "0.4.3"
inline_colorization = "0.1.6"
serde_json = "1.0.135"
