[package]
name = "cggmp21-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"
colored = "3.0.0"
clap = { version = "4.4", features = ["derive"] }
cggmp21 = { version = "0.6.0", default-features = false, features = ["curve-secp256k1"] }
cggmp21-keygen = "0.5.0"
round-based = "0.4.0"
futures = "0.3"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
bincode = "1.3.3"
aes-gcm = "0.10"
tempfile = "3.15.0"
tracing = "0.1.41"
chrono = "0.4.39"
uuid = { version = "1.11.1", features = ["v4"] }
tungstenite = "0.20.1"
futures-util = "0.3.31"
rust-fsm = "0.7.0"
pot = "3.0.1"
rmp-serde = "1.3.0"
hex = "0.4.3"
inline_colorization = "0.1.6"
serde_json = "1.0.135"
# Core libp2p crates
libp2p = { version = "0.55.0", features = [
    "dns",
    "gossipsub",
    "tcp",
    "websocket",
    "noise",
    "yamux",
    "ping",
    "identify",
    "kad",
    "request-response",
    "tokio",
    "macros"
]}
libp2p-core = "0.43.0"
libp2p-mdns = "0.47.0"
libp2p-identify = "0.46.0"
libp2p-identity = "0.2.10"
libp2p-gossipsub = "0.48.0"
libp2p-kad = "0.47.0"
libp2p-noise = "0.46.0"
libp2p-request-response = "0.28.0"
libp2p-swarm = "0.46.0"
libp2p-tcp = { version = "0.43.0", features = ["tokio"] }
libp2p-yamux = "0.47.0"
async-trait = "0.1.85"
bytes = "1.9.0"
env_logger = "0.11.6"
log = "0.4"
